a tag wordwrap fix

--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -3,6 +3,7 @@
     a{
         text-decoration:none;
         color: inherit;
+        overflow-wrap: break-word;
     }
     .icon-button{
         font-size:inherit;
